complete rebuild. implementing newer ideas

--- a/index.html
+++ b/index.html
@@ -3,12 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="css/reset.css">
     <link rel="stylesheet" type="text/css" href="css/main.css">
+    <link href="https://fonts.googleapis.com/css2?family=Adamina&display=swap" rel="stylesheet">
     <title>Library</title>
 </head>
 <body>
-    <button id="newBook">NEW BOOK</button>
-    <div id="bookContainer"></div>
+    <div id="theGrid">
+        <div id="theHeader">
+            <h1>Library</h1>
+            <button>Add Book</button>
+        </div>
+        <div id="theCatalog"></div>
+    </div>
 
     <script src="js/main.js">
 
