changed font for different views

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 </div>
             </div>
             <div class="books">
-                <h1 class="bookTitles">Harry Potter</h1>
+                <h1 class="bookTitles">Harry Potter & the Sorcerer's Stone</h1>
                 <h2 class="bookAuthors">J.K. Rowling</h2>
                 <h3 class="bookPages">234 pages</h3>
                 <div class="bookFooters">
