submitButton works, created render()

--- a/index.html
+++ b/index.html
@@ -18,58 +18,7 @@
             <button id="addBtn">Add Book</button>
             <div id="theForm" class="closedForm"></div>
         </div>
-        <div id="theCatalog">
-            <div class="books">
-                <h1 class="bookTitles">Harry Potter</h1>
-                <h2 class="bookAuthors">J.K. Rowling</h2>
-                <h3 class="bookPages">234 pages</h3>
-                <div class="bookFooters">
-                    <h4>Read</h4>
-                    <i class="material-icons">check</i>
-                    <i class="bookDeletes material-icons">delete</i>
-                </div>
-            </div>
-            <div class="books">
-                <h1 class="bookTitles">Harry Potter & the Sorcerer's Stone</h1>
-                <h2 class="bookAuthors">J.K. Rowling</h2>
-                <h3 class="bookPages">234 pages</h3>
-                <div class="bookFooters">
-                    <h4>Not Read</h4>
-                    <i class="material-icons">check</i>
-                    <i class="bookDeletes material-icons">delete</i>
-                </div>
-            </div>
-            <div class="books">
-                <h1 class="bookTitles">Harry Potter</h1>
-                <h2 class="bookAuthors">J.K. Rowling</h2>
-                <h3 class="bookPages">234 pages</h3>
-                <div class="bookFooters">
-                    <h4>Read</h4>
-                    <i class="material-icons">check</i>
-                    <i class="bookDeletes material-icons">delete</i>
-                </div>
-            </div>
-            <div class="books">
-                <h1 class="bookTitles">Harry Potter</h1>
-                <h2 class="bookAuthors">J.K. Rowling</h2>
-                <h3 class="bookPages">234 pages</h3>
-                <div class="bookFooters">
-                    <h4>Not Read</h4>
-                    <i class="material-icons">check</i>
-                    <i class="bookDeletes material-icons">delete</i>
-                </div>
-            </div>
-            <div class="books">
-                <h1 class="bookTitles">Harry Potter</h1>
-                <h2 class="bookAuthors">J.K. Rowling</h2>
-                <h3 class="bookPages">234 pages</h3>
-                <div class="bookFooters">
-                    <h4>Not Read</h4>
-                    <i class="material-icons">check</i>
-                    <i class="bookDeletes material-icons">delete</i>
-                </div>
-            </div>
-        </div>
+        <div id="theCatalog"></div>
     </div>
 
     <script src="js/main.js">
